--- a/css/flexnavbar/flexnav.css
+++ b/css/flexnavbar/flexnav.css
@@ -3,8 +3,13 @@
 .nav{
     background-color: grey;
     vertical-align: middle;
-    font-family: Roboto;
+    font-family: Roboto
     color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    text-decoration: none;
+    
 }
 
 .nav-links{
@@ -13,12 +18,13 @@
     justify-content: flex-end;
     gap: 25px;
     justify-items: center;
+    font-family: roboto;
+    
 }
 
 .active{
-    /* display: flex;
-    justify-content: end; */
     color: white;
+    text-decoration: none;
 }
 
 .btn{
@@ -32,5 +38,16 @@ ul , h1{
     justify-items:flex-end;
     padding-bottom: 10px;
     align-items: center;
+    color: white;
+    list-style-type: none;
+}
+
+.nav-title{
+    color: white ;
+    font-family: roboto;
+}
+
+.nav-links a{
+    text-decoration: none;
     color: white;
 }
