--- a/belt_exam/style.css
+++ b/belt_exam/style.css
@@ -4,6 +4,286 @@
 }
 
 .container{
-    width: 1200px;
-    background-color: tan;
+    width: 1000px;
+    margin-left: 10px;
+}
+.hover_image:hover {
+    text-decoration: none
+}
+.hide {
+    display:none
+}
+
+.hover_image:hover img:first-child{
+    display:none
+}
+.hover_image:hover img:last-child{
+    display:inline-block
+}
+
+.nav-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo{
+    display: flex;
+    align-items: center;
+    padding-right: 15px;
+
+    /* background-color: beige; */
+}
+
+.logo > img{
+    width: 40px;
+    background-color:aquamarine;
+    border-radius: 7px;
+    margin-right: 15px;
+}
+
+.searchbar > input {
+    /* background-color: purple; */
+    width: 690px;
+    height: 30px;
+    border-radius: 12px;
+}
+
+.signin{
+    display: flex;
+    align-items: center;
+    
+    /* background-color: blue; */
+}
+.signin > p{
+    padding-right: 25px;
+}
+.signin > input{
+    width: 40px;
+}
+
+.link-bar{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 3px solid black;
+    padding: 5px 0 5px 0;
+}
+
+.title-bar{
+    display: flex;
+    justify-content: center;
+    padding: 35px 0;
+    font-size: larger;   
+}
+
+.mainbody{
+    /* display: flex;
+} */
+
+}
+
+.top-set{
+    display: flex;
+}
+
+.left-set{
+    background-color: aquamarine;
+    display: flex;
+    color: white;
+    flex: 1;
+    width: 640px;
+    margin-right: 20px;
+    height: 325px;
+    
+}
+
+.largetext{
+    flex: 1;
+    width: 350px;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.largeimage{
+    flex: 1;
+}
+
+.right-set{
+    flex: 1;
+    color: white;
+}
+
+.arrow{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 40px;
+}
+
+.small-top{
+    display: flex;
+}
+
+.small-top >img{
+    width: 340px;
+}
+
+.smallbottom{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 20px;
+    background-color: aquamarine;
+    height: 78px;
+    padding-left: 30px ;
+}
+
+.smallbottom > img{
+    width: 25px;
+}
+
+.bottom-set{
+    background-color:rgb(118, 217, 221) ;
+    display: flex;
+    justify-content: space-evenly ;
+    
+}
+
+.imageone > img{
+    border-radius: 50%;
+    height: 110px;
+    padding-bottom: 15px;
+    
+}
+
+.imagetwo > img{
+    border-radius: 50%;
+    height: 110px;
+    padding-bottom: 15px;
+    
+}
+
+.imagethree > img{
+    border-radius: 50%;
+    height: 110px;
+    padding-bottom: 15px;
+   
+}
+
+.imagefour > img{
+    border-radius: 50%;
+    height: 110px;
+    padding-bottom: 15px;
+   
+}
+
+.imagefive > img{
+    border-radius: 50%;
+    height: 110px;
+    padding-bottom: 15px;
+}
+
+.imagesix > img{
+    border-radius: 50%;
+    height: 110px;
+    padding-bottom: 15px;
+    
+}
+
+.imageone{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.imagetwo{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.imagethree{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.imagefour{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.imagefive{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.imagesix{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.bottom-set{
+    padding: 55px 0 55px 0;
+    margin-top: 20px;
+}
+
+.bar{
+    border: 2px solid black;
+    height: 20%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: fixed;
+}
+
+#cookie-message{
+    display: flex;
+    border: 2px solid black;
+    height: 100px;
+    align-items: center;
+    justify-content: flex-start;
+    justify-content: space-between;
+    margin-top: -55px;
+    background-color: white;
+}
+
+#cookie-message > button{
+    background-color:aquamarine;
+    height: 35px;
+    width: 100px;
+    color: white;
+    font: bold;
+    font-size: medium;
+    box-shadow: 5px 5px black;
+    border: 3px solid black;
+
+}
+
+.words{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    
+}
+
+.words > p{
+    display: flex;
+    
+}
+
+#cookie-message > img{
+    padding-left: 20px;
+    margin-right: -150px;
 }
